--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bellingham Bar & Grill</title>
-  <nav class="navbar navbar-expand-lg"style="background-color:#36454F">
+<title>Title of the document</title>
+</head>
+
+<body>
+<nav class="navbar navbar-expand-lg"style="background-color:#36454F">
   <a class="navbar-brand" href="#">Bellingham Bar and Grill</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -45,10 +48,47 @@
   
  <center><div><button class="button">Grill Menu</button></div>
   </div>
-</head>
+  <style>
+  .navbar-brand{
+  color:white;
+}
+.nav-link{
+  color:white;
+}
+.cardContainer{
+  margin:10px;
+}
+.row{
+  margin:10px;
+}
 
-<body>
-<Center><div class="accordion" id="accordionExample">
+.button {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #36454F;
+  background-color: #FFE5B4;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  width:200px;
+}
+.button:hover {background-color: #FF5349}
+.button:active {
+  background-color: #FF0000;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.container{
+  flex-direction: column;
+}
+
+  </style>
+  
+ 
+  <Center><div class="accordion" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
@@ -212,7 +252,6 @@
 DOUBLE well drinks start at $2.00 at 9pm and increase $0.50 every half hour until close.
 
 BBG gets absolutely packed on Wednesday night - get here early to get a booth, a pool table, and a few $2 doubles!">Progressive Wells</button>
-
 </body>
 
 </html>
