--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Title of the document</title>
-</head>
-
-<body>
-<nav class="navbar navbar-expand-lg"style="background-color:#36454F">
+<title>Bellingham Bar & Grill</title>
+  <nav class="navbar navbar-expand-lg"style="background-color:#36454F">
   <a class="navbar-brand" href="#">Bellingham Bar and Grill</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -46,6 +43,10 @@
 
  <center><div><button class="button">Grill Menu</button></div>
   </div>
+</head>
+
+<body>
+
   <style>
   .navbar-brand{
   color:white;
